--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,9 +81,11 @@
     <string name="review_edit_dialog_text">후기 수정 시 재승인이 필요합니다.\n신중히 결정해주세요 😭</string>
 
     <string name="review_main_title">대학생활 후기</string>
-    <string name="review_main_ment">동아리 후기 작성하고\n아이패드/에어팟 받자 😎</string>
+    <string name="review_main_ment">후기 작성하고\n아이패드/에어팟 받자 😎</string>
     <string name="review_main_club">🕺 동아리 후기</string>
     <string name="review_main_act">💃 대외활동 후기</string>
     <string name="review_main_intern">👩‍💻 인턴 후기</string>
+
+
 
 </resources>
