--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,7 +73,7 @@
     <string name="review_event_ment">후기 작성하고🐵\n아이패드 받자!</string>
 
     <string name="review_edit">후기 수정</string>
-    <string name="review_edit_info">동아리 활동 정보🦄</string>
+    <string name="review_edit_info"> 활동 정보🦄</string>
     <string name="review_edit_score">총 별점 추천🌟</string>
     <string name="review_edit_simple">정성 후기 ✍️ </string>
 
