[SSGSAG-106] 전체뷰 ad item 제작
n/a

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,8 @@
 
     <string name="com.crashlytics.useFirebaseAppId">true</string>
 
+    <string name="admob_app_id">ca-app-pub-6888357719311971~5202997355</string>
+    <string name="banner_ad_unit_id">ca-app-pub-6888357719311971/1199558187</string>
+    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>
+
 </resources>
