[SSGSAG-198] 상담/수다 리스트 화면 - 상담/수다 구분
n/a

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,6 +112,7 @@
 
     <!-- Community Board text -->
     <string name="counsel_title">고민 상담</string>
+    <string name="talk_title">자유 수다</string>
 
 
 
