[SSGSAG-276] 상담/수다 상세화면 - 댓글, 대댓글 clickListener 달기
답글 좋아요 기능 구현 (버그 있음)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,7 +140,7 @@
 
     <!-- setting -->
     <string name="test_url">54.180.145.82:8080</string>
-    <string name="base_url">http://ssgsag-alb-2141317761.ap-northeast-2.elb.amazonaws.com</string>
+    <string name="base_url">https://ssgsag-server.com</string>
 
     <string name="com.crashlytics.useFirebaseAppId">true</string>
 
