--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,11 +100,23 @@
     <!-- Login text -->
     <string name="login_toast_content_authorization_failed">회원정보 확인에 실패했습니다.\n다시 로그인해주세요!</string>
 
+    <string name="my_page_service">Service</string>
+    <string name="my_page_dev">Dev</string>
+
     <!-- setting -->
     <string name="com.crashlytics.useFirebaseAppId">true</string>
-
     <string name="admob_app_id">ca-app-pub-6888357719311971~5202997355</string>
     <string name="banner_ad_unit_id">ca-app-pub-6888357719311971/1199558187</string>
     <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>
+
+    <!-- setting -->
+    <string name="test_url">https://54.180.105.200:8080</string>
+    <string name="base_url">https://ssgsag-server.com</string>
+    <string name="facebook_app_id">409525746550194</string>
+    <string name="kakao_app_key">c04255800313c33eff056de904ed9023</string>
+    <string name="kakaolink_host">kakaolink</string>
+    <string name="kakao_scheme">kakaoc04255800313c33eff056de904ed9023</string>
+    <string name="kakao_ads_client_id">DAN-1hr8ofguvdyeb</string>
+    <string name="adjust_app_token">j5uza6tddv5s</string>
 
 </resources>
