[SSGSAG-411] Release 3.5.0 QA - 마이페이지 이용약관, 개인정보 보호 변경
n/a

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -422,6 +422,9 @@
     <string name="kakao_scheme">kakaoc04255800313c33eff056de904ed9023</string>
     <string name="kakao_ads_client_id">DAN-1hr8ofguvdyeb</string>
 
+    <string name="default_notification_channel_name">슥삭</string>
+    <string name="default_notification_channel_id">ssgsag-6d216</string>
+
     <string name="adjust_app_token">j5uza6tddv5s</string>
 
 </resources>
